// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@str/ui-chrome snapshots > AppSidebar renders 1-line nav when description absent 1`] = `
"<aside class="related-generators" aria-label="Related generators">
  <p class="label text-navy">Related generators</p>

  <ul class="mt-4 space-y-3">
    <li>
          <a href="/cleaner-dispatch" class="block text-ink hover:text-accent text-sm">
            Cleaner dispatch
          </a>
        </li>
  </ul>
</aside>"
`;

exports[`@str/ui-chrome snapshots > AppSidebar renders 2-line card when description present 1`] = `
"<aside class="related-generators" aria-label="Related generators">
  <p class="label text-navy">Related generators</p>

  <ul class="mt-4 space-y-3">
    <li>
          <a href="/house-rules-pdf" class="block group rounded-md border border-rule bg-parchment-light p-4 no-underline hover:border-[color:var(--accent-500)] hover:shadow-card transition-all duration-std">
            <p class="text-ui text-navy group-hover:text-[color:var(--accent-700)] font-semibold">House Rules</p>
            <p class="mt-1 text-caption text-ink-2 leading-snug">PDF generator</p>
          </a>
        </li>
  </ul>
</aside>"
`;

exports[`@str/ui-chrome snapshots > Footer renders with siteConfig footer sections 1`] = `
"<footer class="surface-navy mt-7">
  <div class="mx-auto max-w-6xl px-5 py-8">
    <div class="grid grid-cols-1 md:grid-cols-4 gap-8 footer-nav">
      <div>
        <span class="inline-flex items-baseline gap-1">
  <span class="font-serif font-medium leading-none whitespace-nowrap text-[28px] text-[color:var(--accent-500)]">
    STR Guests
  </span>
  <span class="font-sans uppercase font-semibold leading-none text-[12px] tracking-[0.28em]" aria-hidden="true">
    <span class="text-parchment">.</span><span class="text-parchment opacity-70">tools</span>
  </span>
</span>
        <p class="mt-3 text-small text-parchment max-w-xs leading-snug">
          Free tools for hosts
        </p>
      </div>

      <div>
          <p class="label text-[color:var(--accent-500)]">Site</p>
          <ul class="mt-3 space-y-2">
            <li>
                <a href="/" class="text-small text-parchment no-underline hover:underline hover:decoration-[color:var(--accent-500)] underline-offset-2">
                  Home
                </a>
              </li>
          </ul>
        </div>
    </div>

    

    <hr class="accent-rule full mt-7 border-0 h-px" style="background: var(--accent-500);">

    <div class="flex flex-col md:flex-row items-start md:items-center justify-between gap-3">
      <p class="text-caption text-parchment opacity-70">
        &copy; 2026 STR Guests Tools. Generated content is for informational purposes only — not legal or tax advice.
      </p>
      <p class="text-caption text-parchment opacity-70 font-mono">
        Last updated <time datetime="2026-05-11">2026-05-11</time>
      </p>
    </div>
  </div>
</footer>"
`;

exports[`@str/ui-chrome snapshots > FunnelBand renders 1`] = `
"
  <section class="funnel-band border-t border-rule bg-parchment-light">
    <div class="mx-auto max-w-6xl px-5 py-4 flex flex-col sm:flex-row items-start sm:items-center justify-between gap-3">
      <p class="text-small text-ink-2 leading-snug">
        <span class="label text-navy mr-2">Built by</span>
        <a href="https://thestrledger.com" class="font-serif text-h3 text-navy no-underline hover:text-navy-tint transition-colors duration-std">
          The STR Ledger<span class="period-accent">.</span>
        </a>
        <span class="text-ink-2"> Excel templates and PDFs for short-term rental finance.</span>
      </p>
      <a href="https://thestrledger.com?utm_source=strguests-tools&#38;utm_medium=funnel-band" class="text-ui text-navy no-underline whitespace-nowrap hover:text-[color:var(--accent-700)] group">
        Visit The STR Ledger
        <span class="text-[color:var(--accent-500)] inline-block transition-transform duration-std group-hover:translate-x-0.5" aria-hidden="true"> →</span>
      </a>
    </div>
  </section>
"
`;

exports[`@str/ui-chrome snapshots > Header renders with siteConfig nav 1`] = `
"<header class="border-b border-rule bg-parchment">
  <div class="mx-auto max-w-6xl px-5 py-5 flex items-center justify-between gap-6">
    <a href="/" aria-label="STR Guests Tools — home" class="no-underline inline-flex items-baseline gap-1 shrink-0">
  <span class="font-serif font-medium leading-none whitespace-nowrap text-[28px] text-[color:var(--accent-700)]">
    STR Guests
  </span>
  <span class="font-sans uppercase font-semibold leading-none text-[12px] tracking-[0.28em]" aria-hidden="true">
    <span class="text-[color:var(--accent-500)]">.</span><span class="text-ink-3">tools</span>
  </span>
</a>

    <nav class="hidden lg:flex items-center gap-6" aria-label="Primary">
      <a href="/templates" class="text-ui text-ink-2 no-underline hover:text-[color:var(--accent-700)] transition-colors duration-std whitespace-nowrap">
          Templates
        </a><a href="/blog" class="text-ui text-ink-2 no-underline hover:text-[color:var(--accent-700)] transition-colors duration-std whitespace-nowrap">
          Blog
        </a>
      
    </nav>

    <details class="lg:hidden relative">
      <summary class="list-none cursor-pointer p-2 -mr-2" aria-label="Open menu">
        <svg width="22" height="22" viewBox="0 0 22 22" aria-hidden="true">
          <path d="M3 6h16M3 11h16M3 16h16" stroke="currentColor" stroke-width="1.5" fill="none"></path>
        </svg>
      </summary>
      <div class="absolute right-0 top-full mt-2 w-60 bg-parchment-light border border-rule rounded-md shadow-lifted py-2 z-10">
        <a href="/templates" class="block px-4 py-2 text-ui text-ink-2 no-underline hover:bg-parchment-alt hover:text-[color:var(--accent-700)]">
            Templates
          </a><a href="/blog" class="block px-4 py-2 text-ui text-ink-2 no-underline hover:bg-parchment-alt hover:text-[color:var(--accent-700)]">
            Blog
          </a>
      </div>
    </details>
  </div>
</header>"
`;

exports[`@str/ui-chrome snapshots > Sidebar renders 1`] = `
"<aside class="related-generators" aria-label="Related pages">
  <p class="label text-navy">Related pages</p>

  <ul class="mt-4 space-y-3">
    <li>
        <a href="/templates" class="block group rounded-md border border-rule bg-parchment-light p-4 no-underline hover:border-[color:var(--accent-500)] hover:shadow-card transition-all duration-std">
          <p class="text-ui text-navy group-hover:text-[color:var(--accent-700)] font-semibold">Templates</p>
        </a>
      </li><li>
        <a href="/blog" class="block group rounded-md border border-rule bg-parchment-light p-4 no-underline hover:border-[color:var(--accent-500)] hover:shadow-card transition-all duration-std">
          <p class="text-ui text-navy group-hover:text-[color:var(--accent-700)] font-semibold">Blog</p>
        </a>
      </li>
  </ul>
</aside>"
`;

exports[`@str/ui-chrome snapshots > Wordmark renders brand wordmark 1`] = `
"<a href="/" aria-label="STR Guests Tools — home" class="no-underline inline-flex items-baseline gap-1">
  <span class="font-serif font-medium leading-none whitespace-nowrap text-[28px] text-[color:var(--accent-700)]">
    STR Guests
  </span>
  <span class="font-sans uppercase font-semibold leading-none text-[12px] tracking-[0.28em]" aria-hidden="true">
    <span class="text-[color:var(--accent-500)]">.</span><span class="text-ink-3">tools</span>
  </span>
</a>"
`;
